--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  
+  <header class="site-header">
+  <div class="logo">ATELIER<br>ELASTIC</div>
+  <nav class="menu">
+    <a href="#">About</a>
+    <a href="#">Work</a>
+  </nav>
+</header>
+
   <h1>Hello from my static site!</h1>
   <p>This is a starting point.</p>
 </body>
