--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   
   <header class="site-header">
-  <div class="logo">ATELIER<br>ELASTIC</div>
+  <div class="logo">
+    <a href="index.html"><img src="logo.png" alt="Atelier Elastic Logo" /></a>
+  </div>
   <nav class="menu">
     <a href="#">About</a>
     <a href="#">Work</a>
