--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   
   <header class="site-header">
-  <div class="logo">
-    <a href="index.html"><img src="logo.png" alt="Atelier Elastic Logo" /></a>
+  <div class="Logo">
+    <a href="index.html"><img src="Logo.png" alt="Atelier Elastic Logo" /></a>
   </div>
   <nav class="menu">
     <a href="#">About</a>
