--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
   
   <header class="site-header">
-  <div class="Logo">
-    <a href="index.html"><img src="Logo.png" alt="Atelier Elastic Logo" /></a>
+  <div class="logo">
+    <a href="index.html">
+      <img src="Logo.png" alt="Atelier Elastic Logo" />
+    </a>
   </div>
   <nav class="menu">
-    <a href="#">About</a>
-    <a href="#">Work</a>
+    <a href="about.html">About</a>
+    <a href="work.html">Work</a>
   </nav>
 </header>
+
 
   <h1>Hello from my static site!</h1>
   <p>This is a starting point.</p>
