--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="Index.html"><img src="Logo.png" alt="Atelier Elastic Logo" /></a>
+      <a href="Index.html"><img src="logo.png" alt="Atelier Elastic Logo" /></a>
     </div>
     <nav class="menu">
       <a href="About.html">About</a>
