--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Atelier Elastic</title>
-  <link rel="stylesheet" href="Style.css" />
+  <title>atelier elastic</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="Index.html"><img src="logo.png" alt="Atelier Elastic Logo" /></a>
+      <a href="index.html"><img src="logo.png" alt="atelier elastic logo" /></a>
     </div>
     <nav class="menu">
-      <a href="About.html">About</a>
-      <a href="Work.html">Work</a>
+      <a href="about.html">about</a>
+      <a href="work.html">work</a>
     </nav>
   </header>
 
