--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <a href="index.html"><img src="logo.png" alt="atelier elastic logo" /></a>
     </div>
     <nav class="menu">
-      <a href="about.html">about</a>
-      <a href="work.html">work</a>
-    </nav>
+  <a href="about.html">About</a>
+  <a href="work.html">Work</a>
+</nav>
+
   </header>
 
   <h1>Hello from my static site!</h1>
