--- a/index.html
+++ b/index.html
@@ -4,22 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>atelier elastic</title>
-<link rel="stylesheet" href="style.css" />
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="logo">
       <a href="index.html"><img src="logo.png" alt="atelier elastic logo" /></a>
     </div>
-   <nav class="menu">
-  <a href="about.html">About</a>
-  <a href="work.html">Work</a>
-</nav>
-
+    <nav class="menu">
+      <a href="about.html">About</a>
+      <a href="index.html">Work</a>
+    </nav>
   </header>
 
-  <h1>Hello from my static site!</h1>
-  <p>This is a starting point.</p>
+  <main>
+    <div class="filter-menu">
+      <button class="active">All</button>
+      <button>Research</button>
+      <button>Cartography & Territorial Studies</button>
+      <button>Architectural Imagery</button>
+      <button>Design Projects</button>
+    </div>
+
+    <section class="gallery">
+      <div class="item">
+        <img src="petite-maison.jpg" alt="Petite Maison" />
+        <p>Petite Maison</p>
+      </div>
+      <div class="item">
+        <img src="halle-des-soufflantes.jpg" alt="Halle des Soufflantes" />
+        <p>Halle des Soufflantes</p>
+      </div>
+      <div class="item">
+        <img src="from-scan-to-bim.jpg" alt="From Scan to BIM" />
+        <p>From Scan to BIM</p>
+      </div>
+      <!-- You can add more items here -->
+    </section>
+  </main>
 </body>
 </html>
