--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <p>Petite Maison</p>
       </div>
       <div class="item">
-        <img src="halle-des-soufflantes.jpg" alt="Halle des Soufflantes" />
+        <img src="halle-des-soufflantes.png" alt="Halle des Soufflantes" />
         <p>Halle des Soufflantes</p>
       </div>
       <div class="item">
-        <img src="from-scan-to-bim.jpg" alt="From Scan to BIM" />
+        <img src="from-scan-to-bim.png" alt="From Scan to BIM" />
         <p>From Scan to BIM</p>
       </div>
       <!-- You can add more items here -->
