--- a/about.html
+++ b/about.html
@@ -17,20 +17,24 @@
     </nav>
   </header>
 
-  <main class="about-content">
-    <section>
-      <h1>atelier elastic</h1>
-      <p>
-        atelier elastic is a design and research practice exploring architectural imagery, reuse strategies, and cartographic representations of space.  
-      </p>
-      <p>
-        Based in Switzerland, the studio works across visualizations, design proposals, and territorial studies, with a strong interest in interdisciplinary approaches and collaborative formats.
-      </p>
-      <p>
-        For inquiries, email: <a href="mailto:you@example.com">you@example.com</a><br />
-        Instagram: <a href="https://instagram.com/yourprofile" target="_blank">@yourprofile</a>
-      </p>
+  <main class="about-wrapper">
+    <section class="about-text">
+      <p><strong>Atelier Elastic</strong> is a Zürich-based studio engaged in architecture design, visual storytelling, and spatial research. The practice focuses on interior and exterior visualizations for architecture, as well as illustrations and data-driven graphics for projects ranging from the scale of the building to that of the territory.</p>
+
+      <p>Our projects are diverse in subjects and forms of representation. Throughout our academic and professional paths, we have had the opportunity to engage with a broad range of scales, themes, and methods. Atelier Elastic is the platform that allows us to continue this exploration and to engage with various questions, formats, and collaborations within spatial practice.</p>
+
+      <p><strong>Elastic</strong> is the practice of Diana Zărnescu, architect whose work is rooted in both academic research and professional practice.</p>
+
+      <p><strong>Founder:</strong> Diana Zărnescu — <a href="https://freight.cargo.site/m/R2353258695314157564756324821819/00.DianaZarnescu_CV2025.pdf" target="_blank">CV (PDF)</a><br>
+      Based in Zürich.</p>
+
+      <p><strong>Reach Atelier Elastic by email:</strong><br>
+      <a href="mailto:info@atelierelastic.ch">info@atelierelastic.ch</a></p>
     </section>
+
+    <div class="about-image">
+      <img src="portrait.jpg" alt="Portrait of Diana Zărnescu" />
+    </div>
   </main>
 </body>
 </html>
