--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </a>
 
     <a class="project-thumb architecture-visuals data-illustrations" href="#">
-      <img src="halle-des-soufflantes.jpg" alt="Halle des Soufflantes" />
+      <img src="halle-des-soufflantes.png" alt="Halle des Soufflantes" />
       <p>Halle des Soufflantes</p>
     </a>
 
     <a class="project-thumb data-illustrations" href="#">
-      <img src="from-scan-to-bim.jpg" alt="From Scan to BIM" />
+      <img src="from-scan-to-bim.png" alt="From Scan to BIM" />
       <p>From Scan to BIM</p>
     </a>
 
@@ -49,7 +49,7 @@
     </a>
 
     <a class="project-thumb architecture-visuals design-studies" href="#">
-      <img src="house-in-livezi.jpg" alt="House in Livezi" />
+      <img src="house-in-livezi.png" alt="House in Livezi" />
       <p>House in Livezi</p>
     </a>
   </div>
