--- a/about.html
+++ b/about.html
@@ -1,40 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About — atelier elastic</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
 <body>
-  <header class="site-header">
-    <div class="logo">
-      <a href="index.html"><img src="logo.png" alt="atelier elastic logo" /></a>
-    </div>
-    <nav class="menu">
-      <a href="about.html">About</a>
-      <a href="index.html">Work</a>
-    </nav>
-  </header>
+  <div class="page-container">
 
-  <main class="about-wrapper">
-    <section class="about-text">
-      <p><strong>Atelier Elastic</strong> is a Zürich-based studio engaged in architecture design, visual storytelling, and spatial research. The practice focuses on interior and exterior visualizations for architecture, as well as illustrations and data-driven graphics for projects ranging from the scale of the building to that of the territory.</p>
+    <!-- Header -->
+    <header class="site-header">
+      <div class="logo">
+        <img src="logo.png" alt="Atelier Elastic Logo" />
+      </div>
+      <nav class="menu">
+        <a href="about.html">About</a>
+        <a href="index.html">Work</a>
+      </nav>
+    </header>
 
-      <p>Our projects are diverse in subjects and forms of representation. Throughout our academic and professional paths, we have had the opportunity to engage with a broad range of scales, themes, and methods. Atelier Elastic is the platform that allows us to continue this exploration and to engage with various questions, formats, and collaborations within spatial practice.</p>
-
-      <p><strong>Elastic</strong> is the practice of Diana Zărnescu, architect whose work is rooted in both academic research and professional practice.</p>
-
-      <p><strong>Founder:</strong> Diana Zărnescu — <a href="https://freight.cargo.site/m/R2353258695314157564756324821819/00.DianaZarnescu_CV2025.pdf" target="_blank">CV (PDF)</a><br>
-      Based in Zürich.</p>
-
-      <p><strong>Reach Atelier Elastic by email:</strong><br>
-      <a href="mailto:info@atelierelastic.ch">info@atelierelastic.ch</a></p>
+    <!-- About Content -->
+    <section class="about-wrapper">
+      <div class="about-text">
+        <p><strong>Atelier Elastic</strong> is a Zürich-based studio engaged in architecture design, visual storytelling, and spatial research. ...</p>
+        <p><strong>Founder:</strong> Diana Zărnescu — <a href="your-cv-link.pdf" target="_blank">CV (PDF)</a><br>Based in Zürich.</p>
+        <p><strong>Reach Atelier Elastic by email:</strong><br>
+        <a href="mailto:info@atelierelastic.ch">info@atelierelastic.ch</a></p>
+      </div>
+      <div class="about-image">
+        <img src="background.png" alt="About Atelier Elastic" />
+      </div>
     </section>
 
-    <div class="about-image">
-      <img src="portrait.jpg" alt="Portrait of Diana Zărnescu" />
-    </div>
-  </main>
+  </div> <!-- END .page-container -->
 </body>
-</html>
