--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   </div> <!-- END .page-container -->
 
+  <!-- JS: Filter Logic -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const menuItems = document.querySelectorAll("#filter-menu li");
