--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <div class="page-container">
 
-    <!-- Header -->
+    <!-- Logo and Navigation -->
     <header class="site-header">
-      <div class="logo">
+      <div class="site-title">
         <img src="logo.png" alt="Atelier Elastic Logo" />
       </div>
       <nav class="menu">
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <!-- Filter Menu -->
+    <!-- Filter Buttons -->
     <ul id="filter-menu">
       <li class="active" data-filter="all">All</li>
       <li data-filter="data-illustrations">Research</li>
@@ -32,51 +32,52 @@
     <!-- Project Gallery -->
     <div class="gallery">
       <a class="project-thumb design-studies data-illustrations" href="/petite-maison">
-        <img alt="Petite Maison" src="petite-maison.jpg" />
+        <img alt="Petite Maison" src="petite-maison.jpg">
         <p>Petite Maison</p>
       </a>
 
       <a class="project-thumb architecture-visuals data-illustrations" href="/halle-des-soufflantes">
-        <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png" />
+        <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png">
         <p>Halle des Soufflantes</p>
       </a>
 
       <a class="project-thumb data-illustrations" href="/from-scan-to-bim">
-        <img alt="From Scan to BIM" src="from-scan-to-bim.png" />
+        <img alt="From Scan to BIM" src="from-scan-to-bim.png">
         <p>From Scan to BIM</p>
       </a>
 
       <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
-        <img alt="Territorial Studies for Biodiversity: Pollinators" src="pollinators.jpg" />
+        <img alt="Pollinators" src="pollinators.jpg">
         <p>Territorial Studies for Biodiversity: Pollinators</p>
       </a>
 
       <a class="project-thumb architecture-visuals design-studies" href="/house-in-livezi">
-        <img alt="House in Livezi" src="house-in-livezi.png" />
+        <img alt="House in Livezi" src="house-in-livezi.png">
         <p>House in Livezi</p>
       </a>
     </div>
 
-  </div> <!-- END .page-container -->
+  </div>
 
-  <!-- JS: Filter Logic -->
+  <!-- Filter Script -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const menuItems = document.querySelectorAll("#filter-menu li");
-      const galleryItems = document.querySelectorAll(".gallery .project-thumb");
+      const menuItems = document.querySelectorAll('#filter-menu li');
+      const galleryItems = document.querySelectorAll('.gallery .project-thumb');
 
       menuItems.forEach(button => {
-        button.addEventListener("click", () => {
+        button.addEventListener('click', () => {
           const filter = button.dataset.filter;
-          menuItems.forEach(btn => btn.classList.remove("active"));
-          button.classList.add("active");
+
+          menuItems.forEach(btn => btn.classList.remove('active'));
+          button.classList.add('active');
 
           galleryItems.forEach(item => {
-            if (filter === "all") {
-              item.style.display = "flex";
+            if (filter === 'all') {
+              item.style.display = 'flex';
             } else {
               const isMatch = item.className.includes(filter);
-              item.style.display = isMatch ? "flex" : "none";
+              item.style.display = isMatch ? 'flex' : 'none';
             }
           });
         });
