--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page-container">
 
-    <!-- Logo and Navigation -->
+    <!-- Header: Logo + Nav -->
     <header class="site-header">
       <div class="site-title">
         <img src="logo.png" alt="Atelier Elastic Logo" />
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <!-- Filter Buttons -->
+    <!-- ✅ Filter Menu (correctly placed below header) -->
     <ul id="filter-menu">
       <li class="active" data-filter="all">All</li>
       <li data-filter="data-illustrations">Research</li>
@@ -32,32 +32,32 @@
     <!-- Project Gallery -->
     <div class="gallery">
       <a class="project-thumb design-studies data-illustrations" href="/petite-maison">
-        <img alt="Petite Maison" src="petite-maison.jpg">
+        <img alt="Petite Maison" src="petite-maison.jpg" />
         <p>Petite Maison</p>
       </a>
 
       <a class="project-thumb architecture-visuals data-illustrations" href="/halle-des-soufflantes">
-        <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png">
+        <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png" />
         <p>Halle des Soufflantes</p>
       </a>
 
       <a class="project-thumb data-illustrations" href="/from-scan-to-bim">
-        <img alt="From Scan to BIM" src="from-scan-to-bim.png">
+        <img alt="From Scan to BIM" src="from-scan-to-bim.png" />
         <p>From Scan to BIM</p>
       </a>
 
       <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
-        <img alt="Pollinators" src="pollinators.jpg">
+        <img alt="Territorial Studies for Biodiversity: Pollinators" src="pollinators.jpg" />
         <p>Territorial Studies for Biodiversity: Pollinators</p>
       </a>
 
       <a class="project-thumb architecture-visuals design-studies" href="/house-in-livezi">
-        <img alt="House in Livezi" src="house-in-livezi.png">
+        <img alt="House in Livezi" src="house-in-livezi.png" />
         <p>House in Livezi</p>
       </a>
     </div>
 
-  </div>
+  </div> <!-- END .page-container -->
 
   <!-- Filter Script -->
   <script>
@@ -86,3 +86,4 @@
   </script>
 </body>
 </html>
+
