--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <li data-filter="design-studies">Design Projects</li>
     </ul>
 
-    <!-- Project Gallery -->
-   <div class="gallery">
+   <!-- Project Gallery -->
+<div class="gallery">
 
   <a class="project-thumb design-studies data-illustrations" href="/petite-maison">
     <img alt="Petite Maison" src="petite-maison.jpg" />
@@ -49,7 +49,7 @@
 
   <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
     <img alt="Pollinators" src="pollinators.jpg" />
-    <p>Pollinators</p>
+    <p>Territorial Studies for Biodiversity: Pollinators</p>
   </a>
 
   <a class="project-thumb architecture-visuals design-studies" href="/house-in-livezi">
