--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page-container">
 
-    <!-- Header: Logo + Nav -->
+    <!-- Header -->
     <header class="site-header">
       <div class="site-title">
         <img src="logo.png" alt="Atelier Elastic Logo" />
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <!-- ✅ Filter Menu (correctly placed below header) -->
+    <!-- Filter Menu -->
     <ul id="filter-menu">
       <li class="active" data-filter="all">All</li>
       <li data-filter="data-illustrations">Research</li>
@@ -29,38 +29,35 @@
       <li data-filter="design-studies">Design Projects</li>
     </ul>
 
-   <!-- Project Gallery -->
-<div class="gallery">
+    <!-- Project Gallery -->
+    <div class="gallery">
+      <a class="project-thumb design-studies data-illustrations" href="/petite-maison">
+        <img alt="Petite Maison" src="petite-maison.jpg" />
+        <p>Petite Maison</p>
+      </a>
 
-  <a class="project-thumb design-studies data-illustrations" href="/petite-maison">
-    <img alt="Petite Maison" src="petite-maison.jpg" />
-    <p>Petite Maison</p>
-  </a>
+      <a class="project-thumb architecture-visuals data-illustrations" href="/halle-des-soufflantes">
+        <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png" />
+        <p>Halle des Soufflantes</p>
+      </a>
 
-  <a class="project-thumb architecture-visuals data-illustrations" href="/halle-des-soufflantes">
-    <img alt="Halle des Soufflantes" src="halle-des-soufflantes.png" />
-    <p>Halle des Soufflantes</p>
-  </a>
+      <a class="project-thumb data-illustrations" href="/from-scan-to-bim">
+        <img alt="From Scan to BIM" src="from-scan-to-bim.png" />
+        <p>From Scan to BIM</p>
+      </a>
 
-  <a class="project-thumb data-illustrations" href="/from-scan-to-bim">
-    <img alt="From Scan to BIM" src="from-scan-to-bim.png" />
-    <p>From Scan to BIM</p>
-  </a>
+      <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
+        <img alt="Pollinators" src="pollinators.jpg" />
+        <p>Territorial Studies for Biodiversity: Pollinators</p>
+      </a>
 
-  <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
-    <img alt="Pollinators" src="pollinators.jpg" />
-    <p>Territorial Studies for Biodiversity: Pollinators</p>
-  </a>
+      <a class="project-thumb architecture-visuals design-studies" href="/house-in-livezi">
+        <img alt="House in Livezi" src="house-in-livezi.png" />
+        <p>House in Livezi</p>
+      </a>
+    </div>
 
-  <a class="project-thumb architecture-visuals design-studies" href="/house-in-livezi">
-    <img alt="House in Livezi" src="house-in-livezi.png" />
-    <p>House in Livezi</p>
-  </a>
-
-</div>
-
-
-  </div> <!-- END .page-container -->
+  </div>
 
   <!-- Filter Script -->
   <script>
@@ -89,4 +86,3 @@
   </script>
 </body>
 </html>
-
