--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header -->
     <header class="site-header">
-      <div class="site-title">
+      <div class="logo">
         <img src="logo.png" alt="Atelier Elastic Logo" />
       </div>
       <nav class="menu">
@@ -47,7 +47,7 @@
       </a>
 
       <a class="project-thumb data-illustrations critical-cartography" href="/pollinators">
-        <img alt="Pollinators" src="pollinators.jpg" />
+        <img alt="Territorial Studies for Biodiversity: Pollinators" src="pollinators.jpg" />
         <p>Territorial Studies for Biodiversity: Pollinators</p>
       </a>
 
@@ -57,27 +57,25 @@
       </a>
     </div>
 
-  </div>
+  </div> <!-- END .page-container -->
 
-  <!-- Filter Script -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const menuItems = document.querySelectorAll('#filter-menu li');
-      const galleryItems = document.querySelectorAll('.gallery .project-thumb');
+      const menuItems = document.querySelectorAll("#filter-menu li");
+      const galleryItems = document.querySelectorAll(".gallery .project-thumb");
 
       menuItems.forEach(button => {
-        button.addEventListener('click', () => {
+        button.addEventListener("click", () => {
           const filter = button.dataset.filter;
-
-          menuItems.forEach(btn => btn.classList.remove('active'));
-          button.classList.add('active');
+          menuItems.forEach(btn => btn.classList.remove("active"));
+          button.classList.add("active");
 
           galleryItems.forEach(item => {
-            if (filter === 'all') {
-              item.style.display = 'flex';
+            if (filter === "all") {
+              item.style.display = "flex";
             } else {
               const isMatch = item.className.includes(filter);
-              item.style.display = isMatch ? 'flex' : 'none';
+              item.style.display = isMatch ? "flex" : "none";
             }
           });
         });
