--- a/about.html
+++ b/about.html
@@ -15,7 +15,17 @@
     <!-- About Content -->
     <section class="about-wrapper">
       <div class="about-text">
-        <p><strong>Atelier Elastic</strong> is a Zürich-based studio engaged in architecture design, visual storytelling, and spatial research. ...</p>
+        <p><strong>Atelier Elastic</strong> Atelier Elastic is a Zürich-based studio engaged in architecture design, visual storytelling, and spatial research. The practice focuses on interior and exterior visualizations for architecture, as well as illustrations and data-driven graphics for projects ranging from the scale of the building to that of the territory.
+
+Our projects are diverse in subjects and forms of representation. Throughout our academic and professional paths, we have had the opportunity to engage with a broad range of scales, themes, and methods. Atelier Elastic is the platform that allows us to continue this exploration and to engage with various questions, formats, and collaborations within spatial practice.
+
+Elastic is the practice of Diana Zărnescu, architect whose work is rooted in both academic research and professional practice.
+
+Founder: Diana Zărnescu (CV)
+Based in Zürich.
+Reach Atelier Elastic by email at:
+
+   info@atelierelastic.ch</p>
         <p><strong>Founder:</strong> Diana Zărnescu — <a href="your-cv-link.pdf" target="_blank">CV (PDF)</a><br>Based in Zürich.</p>
         <p><strong>Reach Atelier Elastic by email:</strong><br>
         <a href="mailto:info@atelierelastic.ch">info@atelierelastic.ch</a></p>
